# tgflim

./: .gitignore  README.md  pyproject.toml
examples/: param_sweep.py  phantom_image.py  single_trace.py
tgflim/: __init__.py  grid.py  io.py  params.py
tgflim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tgflim/core/: __init__.py  image.py  trace.py
tgflim/fit/: __init__.py  correct.py  exp.py  fit_main.py  fitter.py  registry.py  rld.py
tgflim/forward/: __init__.py  acquire.py  model.py  noise.py
tgflim/sim/: generator.py
tgflim/viz/: __init__.py  cmaps.py  hists.py  maps.py  sweeps.py  traces.py
